Add short description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>Simple CRUD example</title>
     </head>
     <body>
-        <h1>Simple CRUD example using PHP/MySQL</h1>
+        <h1>Simple CRUD example</h1>
+        <p>Using PHP with PDO to access the MySQL database</p>
         <form action="add.php" method="post" name="userForm">
             <input type="text" name="name">
             <input type="text" name="email">
