--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
-    <head>
-        <title>Simple CRUD example</title>
-    </head>
-    <body>
-        <h1>Simple CRUD example</h1>
-        <p>Using PHP with PDO to access the MySQL database</p>
-        <form action="add.php" method="post" name="userForm">
-            <input type="text" name="name">
-            <input type="text" name="email">
-            <input type="date" name="birthdate">
-            <input type="submit" name="submit" value="add">
-        </form>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Simple CRUD example</title>
+</head>
+
+<body>
+    <h1>Simple CRUD example</h1>
+    <p>Using PHP with PDO to access the MySQL database</p>
+    <form action="add.php" method="post" name="userForm">
+        <input type="text" name="name">
+        <input type="text" name="email">
+        <input type="date" name="birthdate">
+        <input type="submit" name="submit" value="add">
+    </form>
+</body>
+
 </html>
